; ModuleID = '/home/carl/AnghaBench/kphp-kdb/search/extr_search-index.c_create_item.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/search/extr_search-index.c_create_item.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.item = type { i64, i64, i64, i64, i64, i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.item*, i64)* @create_item to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @create_item(%struct.item* %0, i64 %1) #0 {
  %3 = alloca %struct.item*, align 8
  %4 = alloca i64, align 8
  store %struct.item* %0, %struct.item** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i64, i64* %4, align 8
  %6 = load %struct.item*, %struct.item** %3, align 8
  %7 = getelementptr inbounds %struct.item, %struct.item* %6, i32 0, i32 0
  store i64 %5, i64* %7, align 8
  %8 = load %struct.item*, %struct.item** %3, align 8
  %9 = getelementptr inbounds %struct.item, %struct.item* %8, i32 0, i32 6
  store i64 0, i64* %9, align 8
  %10 = load %struct.item*, %struct.item** %3, align 8
  %11 = getelementptr inbounds %struct.item, %struct.item* %10, i32 0, i32 5
  store i64 0, i64* %11, align 8
  %12 = load %struct.item*, %struct.item** %3, align 8
  %13 = getelementptr inbounds %struct.item, %struct.item* %12, i32 0, i32 4
  store i64 0, i64* %13, align 8
  %14 = load %struct.item*, %struct.item** %3, align 8
  %15 = getelementptr inbounds %struct.item, %struct.item* %14, i32 0, i32 3
  store i64 0, i64* %15, align 8
  %16 = load %struct.item*, %struct.item** %3, align 8
  %17 = getelementptr inbounds %struct.item, %struct.item* %16, i32 0, i32 2
  store i64 0, i64* %17, align 8
  %18 = load %struct.item*, %struct.item** %3, align 8
  %19 = getelementptr inbounds %struct.item, %struct.item* %18, i32 0, i32 1
  store i64 0, i64* %19, align 8
  ret i32 1
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
